user transaction - wip

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@primeuix/themes": "^2.0.2",
         "pinia": "^3.0.4",
         "primevue": "^4.5.4",
-        "remixicon": "^4.7.0"
+        "remixicon": "^4.7.0",
+        "vue-toastification": "^2.0.0-rc.5"
     }
 }
